--- a/style.css
+++ b/style.css
@@ -1,1 +1,33 @@
-
+* {
+    margin: 0;
+    padding: 0;
+box-sizing: border-box;
+}
+body{
+    background-color: #0f0e17;
+}
+h1{
+padding-top: 5px;
+}
+nav{
+    display: flex;
+    justify-content: space-around;
+    background-color: #ff8906;
+    height: 56px;
+    padding-top: 8px;
+}
+.logo{
+max-width: 56px;
+max-height: 56px;
+}
+.menu-toggle{
+    display: inline-block;
+    cursor: pointer;
+    padding-top: 4px;
+}
+.bar{
+    width: 30px;
+    height: 3px;
+    background-color: #0f0e17;
+    margin: 6px 0;
+}
