--- a/style.css
+++ b/style.css
@@ -64,15 +64,11 @@ p {
 .imgRestau img {
   width: 100%;
   border-color: #ff8906;
-  border-style: solid;
-  border-width: 2px;
+box-shadow:10px 5px 5px #f0edea;
   border-radius: 5%;
   height: 100%;
   object-fit: cover;
-  
-  
 }
-
 
 
 .containerFastFood {
@@ -101,7 +97,6 @@ p {
   flex-direction: column;
   
 }
-
 
 .imgBoulangerie {
   width: 80%;
