--- a/style.css
+++ b/style.css
@@ -11,20 +11,52 @@ h1 {
 }
 nav {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: space-around;
   background-color: #ff8906;
-  height: 56px;
   padding-top: 8px;
+}
+
+nav > div {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+
+  width: 100%;
 }
 .logo {
   max-width: 56px;
   max-height: 56px;
 }
-.menu-toggle {
-  display: inline-block;
-  cursor: pointer;
-  padding-top: 4px;
+
+.menu-burger {
+  max-height: 0px;
+  transform: scaleY(0);
+  overflow: hidden;
+  transition: all 2s ease-in-out;
 }
+
+.menu-burger.open {
+  max-height: 150px;
+  transform: scaleY(1);
+  overflow: visible;
+  transition: all 2s ease-in-out;
+}
+
+.burger-icon {
+  cursor: pointer;
+}
+
+ul {
+  list-style: none;
+}
+
+ul li a {
+  color: #f0edea;
+  text-decoration: none;
+}
+
 .bar {
   width: 30px;
   height: 3px;
