--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ nav {
   align-items: center;
   justify-content: space-around;
   background-color: #e60c0c;
-  height: 56px;
+  /* height: 56px; */
   padding-top: 8px;
 }
 
@@ -27,22 +27,33 @@ nav > div {
   width: 100%;
 }
 .logo {
-  max-width: 56px;
-  max-height: 56px;
+  max-width: 64px;
+  max-height: 64px;
 }
 
 .menu-burger {
   max-height: 0px;
   transform: scaleY(0);
   overflow: hidden;
-  transition: all 2s ease-in-out;
+  transition: max-height 1.5s ease-in-out, transform 2s ease-in-out;
+  /* transition: all 2s ease-in-out; */
+  pointer-events: none;
+  justify-content: left;
 }
 
 .menu-burger.open {
-  max-height: 150px;
+  max-height: 200px;
   transform: scaleY(1);
   overflow: visible;
-  transition: all 2s ease-in-out;
+  justify-content: left;
+  transition: max-height 2s ease-in-out, transform 1s ease-in-out;
+}
+
+.menu-links {
+  display: flex;
+  flex-direction: column;
+  padding: 50px;
+  padding-left: 16px;
 }
 
 .burger-icon {
@@ -51,6 +62,10 @@ nav > div {
 
 ul {
   list-style: none;
+}
+
+li {
+  padding: 8px;
 }
 
 ul li a {
@@ -82,12 +97,14 @@ p {
   text-decoration: underline #e60c0c;
 }
 
-.containerImgrestaurant {
-  display: flex;
+.containerImgrestaurants {
+  justify-content: space-between;
   flex-direction: column;
 }
 
 .imgRestau {
+  display: flex;
+  flex-direction: column;
   width: 80%;
   height: 200px;
   margin-left: 10%;
@@ -97,20 +114,14 @@ p {
 .imgRestau img {
   width: 100%;
   border-color: #e60c0c;
-
   border-radius: 5%;
   height: 100%;
   object-fit: cover;
-  padding-top: 24px;
-}
-
-.containerFastFood {
-  display: flex;
-  flex-direction: column;
-  margin-top: 8px;
 }
 
 .imgFastFood {
+  display: flex;
+  flex-direction: column;
   width: 80%;
   height: 200px;
   margin-left: 10%;
@@ -122,7 +133,6 @@ p {
   border-radius: 5%;
   height: 100%;
   object-fit: cover;
-  padding-top: 24px;
 }
 
 .containerBoulangerie {
@@ -131,6 +141,8 @@ p {
 }
 
 .imgBoulangerie {
+  display: flex;
+  flex-direction: column;
   width: 80%;
   height: 200px;
   margin-left: 10%;
@@ -142,7 +154,6 @@ p {
   border-radius: 5%;
   height: 100%;
   object-fit: cover;
-  padding-top: 24px;
 }
 
 main h2 {
@@ -150,9 +161,12 @@ main h2 {
   text-decoration: underline #e60c0c;
   text-align: left;
   background-color: #e60c0c;
+  padding-left: 32px;
 }
 
 .imgRestau p {
+  display: flex;
+  height: 32px;
   font-size: larger;
   text-align: left;
 }
