--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ p {
   display: flex;
   flex-direction: column;
   width: 80%;
-  /* height: 200px; */
+  height: 200px;
   margin-left: 10%;
   margin-top: 16px;
   max-height: 200px;
@@ -124,7 +124,7 @@ p {
   display: flex;
   flex-direction: column;
   width: 80%;
-  /* height: 200px; */
+  height: 200px;
   margin-left: 10%;
   margin-top: 16px;
   max-height: 200px;
@@ -146,7 +146,7 @@ p {
   display: flex;
   flex-direction: column;
   width: 80%;
-  /* height: 200px; */
+  height: 200px;
   margin-left: 10%;
   margin-top: 16px;
 }
@@ -181,4 +181,9 @@ main h2 {
 .imgBoulangerie p {
   font-size: larger;
   text-align: left;
+}
+
+h3{
+padding-top: 32px;
+padding-bottom: 32px;
 }
