--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ nav > div {
   overflow: hidden;
   transition: max-height 1.5s ease-in-out, transform 2s ease-in-out;
   /* transition: all 2s ease-in-out; */
-  pointer-events: none;
+
   justify-content: left;
 }
 
@@ -113,7 +113,7 @@ p {
 }
 
 .imgRestau img {
-  width: 100%;
+  max-width: 100%;
   border-color: #e60c0c;
   border-radius: 5%;
   height: 100%;
@@ -184,4 +184,9 @@ main h2 {
 .imgBoulangerie h3 {
   font-size: larger;
   text-align: left;
+}
+
+.description {
+  text-align: left;
+  margin: auto;
 }
