--- a/style.css
+++ b/style.css
@@ -32,6 +32,8 @@ nav > div {
 }
 
 .menu-burger {
+  display: flex;
+  flex-direction: column;
   max-height: 0px;
   transform: scaleY(0);
   overflow: hidden;
@@ -42,7 +44,9 @@ nav > div {
 }
 
 .menu-burger.open {
-  max-height: 200px;
+  display: flex;
+  flex-direction: column;
+  max-height: 300px;
   transform: scaleY(1);
   overflow: visible;
   justify-content: left;
@@ -52,7 +56,7 @@ nav > div {
 .menu-links {
   display: flex;
   flex-direction: column;
-  padding: 50px;
+  padding: 8px;
   padding-left: 16px;
 }
 
