--- a/style.css
+++ b/style.css
@@ -2,7 +2,14 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
+
+/* @font-face {
+  font-family: "Poppins";
+  src: url("fonts/Poppins-Black.ttf") format("ttf");
+} */
+
 body {
   background-color: #f0edea;
 }
@@ -13,18 +20,15 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
   background-color: #dc273a;
-  /* height: 56px; */
-  padding-top: 8px;
 }
 
 nav > div {
   display: flex;
   justify-content: space-around;
   align-items: center;
-
   width: 100%;
+  margin-right: 9%;
 }
 .logo {
   max-width: 64px;
@@ -39,7 +43,7 @@ nav > div {
   overflow: hidden;
   transition: max-height 1.5s ease-in-out, transform 2s ease-in-out;
   /* transition: all 2s ease-in-out; */
-
+  margin-left: 10%;
   justify-content: left;
 }
 
@@ -47,6 +51,7 @@ nav > div {
   display: flex;
   flex-direction: column;
   max-height: 300px;
+  margin-left: 10%;
   transform: scaleY(1);
   overflow: visible;
   justify-content: left;
@@ -64,19 +69,6 @@ nav > div {
   cursor: pointer;
 }
 
-ul {
-  list-style: none;
-}
-
-li {
-  padding: 8px;
-}
-
-ul li a {
-  color: #f0edea;
-  text-decoration: none;
-}
-
 .bar {
   width: 30px;
   height: 3px;
@@ -92,9 +84,8 @@ h2,
 p {
   color: #0f0e17;
   text-align: center;
-  /* margin-left: 8px;
-  margin-right: 8px;
-  margin-top: 8px; */
+  margin-left: 6%;
+  margin-right: 6%;
 }
 
 .restaurants h2 {
@@ -284,5 +275,12 @@ footer {
 
   main p {
     max-width: 257px;
+  }
+  h1 {
+    font-size: 64px;
+  }
+  .logo {
+    max-width: 12%;
+    max-height: 12%;
   }
 }
